canon-tkn-pipeline/deployment/ocp/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: java-app
  name: java-service
spec:
  type: NodePort
  ports:
  - name: https
    protocol: TCP
    port: 9443
    targetPort: 9443
  selector:
    app: java-app
