canon-tkn-pipeline/deployment/ocp/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: java-app
  name: canon-java
spec:
  port:
    targetPort: http
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
  to:
    kind: Service
    name: java-service
    weight: 100
